Fixes #45: Properly handle word wrap in messages

--- a/design/custom_slate.css
+++ b/design/custom_slate.css
@@ -735,6 +735,9 @@ address {
   font-style: normal;
   line-height: 1.42857143;
 }
+.Message {
+  word-wrap: break-word;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
