--- a/less/core/shared/type.less
+++ b/less/core/shared/type.less
@@ -13,3 +13,7 @@
 .Gloss {
   &:extend(.text-muted);
 }
+
+.Message {
+  word-wrap: break-word;
+}
